Completed:Step_Two

--- a/templates/board.html
+++ b/templates/board.html
@@ -3,8 +3,21 @@
 {% extends "base.html" %} {% block title %} Boggle Board! {% endblock %} {%
 block content %}
 
-<h1>Hello and welcome!</h1>
-{% for row in board %}
-<div>{{board}}</div>
+<h1>Let's Play Boggle!</h1>
+
+<div id="board">
+  {% for row in board %}
+  <div>{{row}}</div>
+  {% endfor %}
+</div>
+
+<br />
+<br />
+
+<form>
+  <label for="guess">Take a guess!</label>
+  <input name="guess" type="text" placeholder="type here..." />
+  <button type="submit">Submit</button>
+</form>
 
 {% endblock %}
