--- a/templates/base.html
+++ b/templates/base.html
@@ -11,4 +11,11 @@
   <body>
     {% block content %} {% endblock %}
   </body>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"
+  ></script>
+  <script src="/static/app.js"></script>
 </html>
