Completed:Step_Five

--- a/templates/board.html
+++ b/templates/board.html
@@ -12,6 +12,10 @@ content %}
 </div>
 
 <br />
+<div id="TimerDiv">
+  <span>Timer:</span>
+  <span id="timer"></span>
+</div>
 <span>Score:</span>
 <span id="score"></span>
 
